# cocolit

./: .dockerignore  .gitignore  404.html  Dockerfile  Dockerfile.mamba  Dockerfile.python  Dockerfile.test  Dockerfile.test.gdal3.2.2  README.md  _requirements.txt  base.ipynb  compose.yaml  data.dvc  environment.yml  feedback.py  index.html  main.py  mkdocs.yml  packages.txt  pyproject.toml  requirements.txt  requirements.yml  sitemap.xml  streamDock  template.py
.conda/conda-meta/: bzip2-1.0.8-h80987f9_6.json  ca-certificates-2025.2.25-hca03da5_0.json  history  libffi-3.4.4-hca03da5_1.json  ncurses-6.4-h313beb8_0.json  openssl-3.0.16-h02f6b3c_0.json  pip-25.1-pyhc872135_2.json  python-3.11.11-hb885b13_0.json  readline-8.2-h1a28f6b_0.json  setuptools-78.1.1-py311hca03da5_0.json  sqlite-3.45.3-h80987f9_0.json  tk-8.6.14-h6ba3021_0.json  tzdata-2025b-h04d1e81_0.json  wheel-0.45.1-py311hca03da5_0.json  xz-5.6.4-h80987f9_1.json  zlib-1.2.13-h18a0788_1.json
.conda/etc/: aau_token
.dvc/: config
.github/workflows/: ci.yml  docs_ci.yml
.streamlit/: config.toml
configs/: config.yml  data.yaml  logger.py  logging.config  train.yaml
docs/: index.md
misc/: help_vis.mov
notebooks/: base.ipynb
pipelines/: inference.py  prepare_data.py  train.py
search/: search_index.json
src/: PatchRaster.py  PatchVector.py  bbox.py  copy_data.py  datacls.py  download.py  exceptions.py  feedback.py  feedbox.py  geojson_to_shapefile.py  ingest_data.py  logger_config.py  model_config.py  train_test_split.py  txt_to_shp.py  valid_bbox.py  vec_to_txt.py
static/: style.css
(+179 files in other folders)
