[project]
name = "cocodet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit-folium>=0.25.0",
    "ultralytics>=8.3.135",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
lint.extend-select = ["ANN"]
lint.ignore = ["E402"]



