[project]
name = "cocodet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geoalchemy2>=0.17.1",
    "numpy>=1.26.4",
    "psycopg2-binary>=2.9.10",
    "rasvec>=0.1.4",
    "sqlmodel>=0.0.24",
    "streamlit-folium>=0.25.0",
    "ultralytics>=8.3.135",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "mkdocs-material>=9.6.14",
    "ruff>=0.11.10",
]

[tool.ruff]
lint.extend-select = ["ANN"]
lint.ignore = ["E402"]


[tool.pytest.ini_options]
pythonpath = ["."]


